2003-07-15  Andreas Kupries  <andreask@activestate.com>

	* modules/snit: New module, William Duquette's oo package 'snit'
	  (aka Snit Is Not IncrTcl).

	* tcllib_version.tcl: Upped to 1.5 because of the new modules
	  (snit, inifile).

	* installed_modules.tcl: Added 'snit' to list of modules.

2003-07-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: Added the new module 'inifile' to the
	  list of packages handled by 'sak'.

2003-07-04  Miguel Sofer <msofer@users.sf.net>

	* modules/ftpd.man:
	* modules/ftpd.tcl (::ftpd::server): the variable ::ftpd::port is
	now updated to reflect the port were the server was opened. This
	is only relevant when a server was requested at port 0 - ie, at a
	port determined by the OS.	

2003-05-26  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl: Updated rpm spec generator using the latest .spec by
	  Jean-Luc as template. The spec now determiens the list of files
	  on its own. Don't have to generate them.

2003-05-23  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (gd-gen-rpmspec): Added functions to generate a .spec
	  file (RPM build specification). Added method 'rpmspec' to
	  generate tcllib.spec.

2003-05-20  Andreas Kupries  <andreask@activestate.com>

	* installed_modules.tcl: Added 'multiplexer' to the list of
	  installed modules. Tested and validqated module. Documentation
	  looks ok for me.

2003-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: added a critcl command to sak to build any critcl
	tcllib submodules into a tcllibc library (or separate libraries).

2003-05-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* comm.man: updated comm to v4.1
	* comm.tcl: rewrite of code to remove pseudo-object model.
	Clean up code, add send -command callback to allow for
	notification of results for asynchronous sends.

2003-05-09  Andreas Kupries  <andreask@activestate.com>

	* sak.tcl (modules_mod): Fixed incorrect check. Caused first