@@ -1,3 +1,9 @@
+2003-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* sak.tcl: Added a command for generating a YAML description
+	file. This is much like the TIP55 format but used for FreePAN.
+	* sak.tcl: Altered the finding of critcl under Windows.
+
 2003-07-15  Andreas Kupries  <andreask@activestate.com>
 
 	* modules/snit: New module, William Duquette's oo package 'snit'
